<resources>
    <string name="app_name">StudentsApp</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student ID</string>
    <string name="student_image">student image</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="add_student">Add Student</string>
    <string name="name_field_label">Name:</string>
    <string name="id_field_label">ID:</string>
    <string name="phone_field_label">Phone:</string>
    <string name="adress_field_label">Adress:</string>
    <string name="enter_student_phone">Enter student phone</string>
    <string name="enter_student_address">Enter student address</string>
    <string name="is_checked_label">- Is Checked</string>
    <string name="cancel">Cancel</string>
    <string name="is_checked">Is Checked:</string>
    <string name="edit">Edit</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
</resources>