<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_field_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/student_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_name"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_field_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/student_id_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_id"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_field_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/student_phone_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_phone"
            android:layout_weight="1"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adress_field_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/student_address_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_address"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <CheckBox
            android:id="@+id/check_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_checked_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/add_student_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student" />

</LinearLayout>
