<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/student_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/student_image"
        android:src="@drawable/student_image" />

    <TextView
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:layout_marginStart="10dp" />

    <CheckBox
        android:id="@+id/check_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
